# grimOS

./: .augment-guidelines  .dockerignore  .eslintignore  .pre-commit-config.yaml  .prettierignore  DEVELOPMENT.md  Dockerfile.frontend.template  Dockerfile.python.template  IMPROVEMENTS.md  MIGRATION-GUIDE.md  MONOREPO.md  README.md  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  next-env.d.ts  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  report-bundle-size.js  setup-grimos.ps1  start-dev.ps1  tsconfig.json  turbo.json
.idx/: dev.nix
apps/backend/: .env.example  Dockerfile  MONITORING.md  Makefile  README.md  README.md.new  alembic.ini  check_api.sh  docker-compose.full.yml  docker-compose.kong.yml  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.yml  package.json  pyproject.toml  requirements.txt  setup.sh  setup_nlp.sh
apps/backend/app/: __init__.py  main.py  main.py.new
apps/backend/app/alembic/: __init__.py  env.py
apps/backend/app/alembic/versions/: 0001_initial_migration.py  001_rbac_tables.py  002_oauth_user_fields.py  20230516_user_auth_schema.py  __init__.py
apps/backend/app/api/v1/: router.py
apps/backend/app/api/v1/admin/: router.py
apps/backend/app/api/v1/auth/: frontend_integration.py  login.py  oauth.py  rbac.py  rbac_schemas.py  router.py  schemas.py
apps/backend/app/api/v1/cognitive/: __init__.py  analysis.py  router.py  scrollweaver.py
apps/backend/app/api/v1/operations/: __init__.py  integration.py  router.py  workflow.py
apps/backend/app/api/v1/security/: RBAC_README.md  auth.py  rbac.py  router.py  threat_intelligence.py  uba.py  user_permissions.py
apps/backend/app/core/: config.py  exceptions.py  metrics.py  metrics_manager.py  oauth.py  security.py
apps/backend/app/core/redis/: __init__.py  cache.py  permission_cache.py  timed_cache.py
apps/backend/app/db/: models.py  session.py
apps/backend/app/middleware/: jwt_validation.py
apps/backend/app/models/: __init__.py  base.py  cognitive.py  threat_indicator.py  uba_login_anomaly.py  workflow.py
apps/backend/app/repositories/: __init__.py  base.py  base_repository.py  cognitive.py  role_repository.py  threat_indicator.py  uba_login_anomaly.py  user_repository.py  workflow.py
apps/backend/app/schemas/: cognitive.py  common.py  integration.py  security.py  uba.py  workflow.py
apps/backend/app/services/: integration.py  threat_intelligence_ingestion.py
apps/backend/grafana/provisioning/dashboards/: dashboard.yml  grimos-api.json
apps/backend/kong/: configure-kong.sh
apps/backend/prometheus/: alertmanager.yml  prometheus.yml
charts/: KUBERNETES_DEPLOYMENT_GUIDE.md  README.md
docs/: Grimoire™ (grimOS) - API Design Specification for MVP.md  Grimoire™ (grimOS) - Development Plan.md  Grimoire™ (grimOS) - Go-to-Market Strategy.md  LINTING.md  (+15 more)
services/auth/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
services/auth/app/: main.py
services/auth/app/api/: api.py  deps.py
services/auth/app/api/endpoints/: auth.py  profile.py  register.py  register.py.new  users.py
services/auth/app/core/: async_kafka.py  config.py  kafka.py  security.py
services/auth/app/crud/: user.py
services/auth/app/db/: init_db.py  session.py
services/auth/app/db/migrations/: env.py  script.py.mako
services/auth/app/grpc/: __init__.py  server.py  user_client.py
services/auth/app/models/: user.py
services/auth/app/schemas/: auth.py  user.py
services/auth/tests/: test_auth_flow.py
services/bitbrew/: pyproject.toml
(+328 files in other folders)
