[project]
name = "grimos-backend"
version = "0.1.0"
description = "GrimOS Backend API"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi==0.110.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg>=3.1.12",
    "kafka-python==2.0.2",
    "redis>=5.0.0",
    "httpx>=0.25.0",
    "uvicorn[standard]>=0.25.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.1.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.7",
    "nltk>=3.8.1",
    "spacy>=3.7.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.287",
    "mypy>=1.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"