[tool.poetry]
name = "grimoire-bitbrew-service"
version = "0.1.0"
description = "BitBrew Intelligence Microservice for Grimoire OS"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
pydantic = "^2.0.0"
sqlalchemy = "^2.0.0"
pydantic-settings = "^2.0.0"
drizzle-orm = "^0.39.1"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
python-dotenv = "^1.0.0"
httpx = "^0.24.1"
prometheus-client = "^0.18.0"
grpcio = "^1.59.0"
grpcio-tools = "^1.59.0"
protobuf = "^4.24.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
ruff = "^0.0.287"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true